Changes in Version 2.0-0 (2017-03-17)
=====================================

   o cooks.distance.rma.mv() now works properly even when there are missing
     values in the data

   o added ranef.rma.mv() for extracting the BLUPs of the random effects for
     'rma.mv' models (but not yet for '~ inner | outer' terms)

   o all functions that repeatedly refit models now have the option to show
     a progress bar

   o added ranktest.default(), so user can now specify the outcomes and
     corresponding sampling variances directly to the function

   o added regtest.default(), so user can now specify the outcomes and
     corresponding sampling variances directly to the function

   o funnel.default() gains 'subset' argument

   o funnel.default() and funnel.rma() gain 'col' and 'bg' arguments

   o more consistent handling of 'robust.rma' objects

   o added location-scale model

   o added a print method for 'rma.gosh' objects

   o the `[` method for 'escalc' objects now properly handles the 'ni' and
     'slab' attributes and does a better job of cleaning out superfluous
     variable name information

   o added rbind() method for 'escalc' objects

   o added a new dataset (dat.pagliaro1992) for another illustration of a
     network meta-analysis

   o rma.uni() and rma.mv() now check if the ratio of the largest to
     smallest sampling variance is extreme large; results may not be stable
     then (and very large ratios typically indicate wrongly coded data)

   o instead of defining own generic ranef(), import ranef() from 'nlme'

   o improved output formatting

   o added more tests

   o some general code cleanup

   o minor updates in the documentation


Changes in Version 1.9-9 (2016-09-25)
=====================================

   o started to use git as version control system, GitHub to host the
     repository (https://github.com/wviechtb/metafor) for the development
     version of the package, Travis CI as continuous integration service