@@ -12,6 +12,10 @@ test_that("residuals are correct for rma().", {
    expect_equivalent(round(rstandard(res)$z, 4), c(0.1401, -0.9930, -0.4719, -1.0475, 1.6462, 0.4825))
    expect_equivalent(round(rstudent(res)$z, 4),  c(0.1426, -0.9957, -0.4591, -1.1949, 2.0949, 0.4330))
 
+   res <- rma(yi, vi, data=dat, method="FE")
+   expect_equivalent(round(sum(residuals(res, type="pearson")^2), 4), round(res$QE, 4))
+   expect_equivalent(round(sum(residuals(res, type="cholesky")^2), 4), round(res$QE, 4))
+
 })
 
 test_that("residuals are correct for rma.mv().", {
@@ -32,8 +36,8 @@ test_that("residuals are correct for rma.mh().", {
 
    res <- rma.mh(measure="RR", ai=tpos, bi=tneg, ci=cpos, di=cneg, data=dat.bcg, subset=1:6)
    expect_equivalent(c(residuals(res)), c(dat$yi - coef(res)))
-   expect_equivalent(round(rstandard(res)$z, 4), c(0.1068, -1.4399, -0.6173, -3.4733, 3.2377, 1.9749))
-   expect_equivalent(round(rstudent(res)$z, 4),  c(0.1076, -1.4668, -0.6219, -4.2413, 3.3947, 2.7908))
+   expect_equivalent(round(residuals(res, type="rstandard"), 4), c(0.1068, -1.4399, -0.6173, -3.4733, 3.2377, 1.9749))
+   expect_equivalent(round(residuals(res, type="rstudent"), 4),  c(0.1076, -1.4668, -0.6219, -4.2413, 3.3947, 2.7908))
 
 })
 
